# project-three-api

./: .dockerignore  .env.example  alembic.ini  compose.yaml  pyproject.toml
migrations/: env.py
src/: database.py  dependencies.py  enums.py  main.py  models.py  schemas.py  settings.py
src/api/: router.py
src/api/auth/: dependencies.py  router.py  schemas.py  services.py
src/api/files/: router.py  schemas.py  services.py
src/api/users/: router.py  services.py
src/schemas/: auth.py  files.py  users.py
